--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,5 @@
 streamlit
-python-dotenv
+openai
 pandas
-python-docx==0.8.11
-XlsxWriter
-numpy
-datetime
-openpyxl
-openai==0.28.0
-streamlit
-python-docx
-beautifulsoup4
-firebase-admin
-streamlit-autorefresh
-qrcode
-requests
-matplotlib
+scipy
+python-dotenv
